fix: - change the error.ejs href

--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -48,7 +48,7 @@
 
         <p><%= typeof message !== 'undefined' ? message : 'Something went wrong. Please try again later or contact support.' %></p>
 
-        <p><a href="/api/v1/">Go back to Homepage</a></p> 
+        <p><a href="/">Go back to Homepage</a></p> 
     </div>
 </body>
 </html>
